--- a/src/app/components/add-todo-form/add-todo-form.component.html
+++ b/src/app/components/add-todo-form/add-todo-form.component.html
@@ -7,6 +7,7 @@
         [(ngModel)]="todo"
         name="todo"
         placeholder="Write todo here..."
+        required
       ></textarea>
     </mat-form-field>
     <!-- <mat-form-field appearance="fill">
@@ -16,6 +17,6 @@
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
         </mat-form-field> -->
-    <button mat-raised-button color="accent">Add todo</button>
+    <button mat-raised-button color="accent" [disabled]="!todo">Add todo</button>
   </form>
 </mat-card>
