--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,9 +1,28 @@
 <app-add-todo-form (onAddTodo)="addTodo($event)"></app-add-todo-form>
 
-<app-todo
-  *ngFor="let todo of todolist"
-  [todo]="todo"
-  (onDeleteTodo)="deleteTodo($event)"
-  (onEditTodo)="editTodo($event)"
-  (onToggleComplete)="toggleComplete($event)"
-></app-todo>
+<mat-tab-group>
+  <mat-tab label="All">
+    <app-todo
+      *ngFor="let todo of todolist"
+      [todo]="todo"
+      (onDeleteTodo)="deleteTodo($event)"
+      (onEditTodo)="editTodo($event)"
+      (onToggleComplete)="toggleComplete($event)"></app-todo>
+  </mat-tab>
+  <mat-tab label="Active">
+    <app-todo
+      *ngFor="let todo of todolist | filter: false"
+      [todo]="todo"
+      (onDeleteTodo)="deleteTodo($event)"
+      (onEditTodo)="editTodo($event)"
+      (onToggleComplete)="toggleComplete($event)"></app-todo>
+  </mat-tab>
+  <mat-tab label="Completed">
+    <app-todo
+      *ngFor="let todo of todolist | filter: true"
+      [todo]="todo"
+      (onDeleteTodo)="deleteTodo($event)"
+      (onEditTodo)="editTodo($event)"
+      (onToggleComplete)="toggleComplete($event)"></app-todo>
+  </mat-tab>
+</mat-tab-group>
