--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,26 +1,26 @@
 <app-add-todo-form (onAddTodo)="addTodo($event)"></app-add-todo-form>
 
-<mat-tab-group>
+<mat-tab-group *ngIf="subject | async as todos">
   <mat-tab label="All">
     <app-todo
-      *ngFor="let todo of todolist"
-      [todo]="todo"
+      *ngFor="let all of todos"
+      [todo]="all"
       (onDeleteTodo)="deleteTodo($event)"
       (onEditTodo)="editTodo($event)"
       (onToggleComplete)="toggleComplete($event)"></app-todo>
   </mat-tab>
   <mat-tab label="Active">
     <app-todo
-      *ngFor="let todo of todolist | filter: false"
-      [todo]="todo"
+      *ngFor="let incomplete of todos | filter: false"
+      [todo]="incomplete"
       (onDeleteTodo)="deleteTodo($event)"
       (onEditTodo)="editTodo($event)"
       (onToggleComplete)="toggleComplete($event)"></app-todo>
   </mat-tab>
   <mat-tab label="Completed">
     <app-todo
-      *ngFor="let todo of todolist | filter: true"
-      [todo]="todo"
+      *ngFor="let complete of todos | filter: true"
+      [todo]="complete"
       (onDeleteTodo)="deleteTodo($event)"
       (onEditTodo)="editTodo($event)"
       (onToggleComplete)="toggleComplete($event)"></app-todo>
