--- a/src/app/components/todo/todo.component.scss
+++ b/src/app/components/todo/todo.component.scss
@@ -25,3 +25,15 @@ mat-card {
 .strike-through{
     text-decoration: line-through;
 }
+
+.todo-inedit{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    p{
+        width: 80%;
+        margin-bottom: 0;
+        margin-left: 17px;
+    }
+}
