--- a/src/app/components/add-todo-form/add-todo-form.component.html
+++ b/src/app/components/add-todo-form/add-todo-form.component.html
@@ -1,22 +1,18 @@
 <mat-card>
-  <form (ngSubmit)="onSubmit()">
-    <mat-form-field>
+  <form (ngSubmit)="onSubmit(); addTodo.reset()" #addTodo="ngForm">
+    <mat-form-field
+      [class.mat-form-field-invalid]="!todoRef.valid && todoRef.dirty">
       <textarea
         matInput
         rows="3"
         [(ngModel)]="todo"
         name="todo"
         placeholder="Write todo here..."
-        required
-      ></textarea>
+        #todoRef="ngModel"
+        required></textarea>
     </mat-form-field>
-    <!-- <mat-form-field appearance="fill">
-            <mat-label>Pick a date</mat-label>
-            <input matInput [matDatepicker]="picker">
-            <mat-hint>MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field> -->
-    <button mat-raised-button color="accent" [disabled]="!todo">Add todo</button>
+    <button mat-raised-button color="accent" [disabled]="!todo">
+      Add todo
+    </button>
   </form>
 </mat-card>
