--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -8,21 +8,24 @@
       (onDeleteTodo)="deleteTodo($event)"
       (onEditTodo)="editTodo($event)"
       (onToggleComplete)="toggleComplete($event)"></app-todo>
+    <mat-card *ngIf="!todos.length" class="noTodos">No Todos Here Yet</mat-card>
   </mat-tab>
-  <mat-tab label="Active">
+  <mat-tab label="Active" *ngIf="todos">
     <app-todo
       *ngFor="let incomplete of todos | filter: false"
       [todo]="incomplete"
       (onDeleteTodo)="deleteTodo($event)"
       (onEditTodo)="editTodo($event)"
       (onToggleComplete)="toggleComplete($event)"></app-todo>
+    <mat-card *ngIf="!todos.length" class="noTodos">No Todos Here Yet</mat-card>
   </mat-tab>
-  <mat-tab label="Completed">
+  <mat-tab label="Completed" *ngIf="todos">
     <app-todo
       *ngFor="let complete of todos | filter: true"
       [todo]="complete"
       (onDeleteTodo)="deleteTodo($event)"
       (onEditTodo)="editTodo($event)"
       (onToggleComplete)="toggleComplete($event)"></app-todo>
+    <mat-card *ngIf="!todos.length" class="noTodos">No Todos Here Yet</mat-card>
   </mat-tab>
 </mat-tab-group>
